--- a/Js_Projects/01_TODO-LocalStorage/styles.css
+++ b/Js_Projects/01_TODO-LocalStorage/styles.css
@@ -1,5 +1,82 @@
-body{
-    padding: 0px;
-    margin: 0px;
- justify-items: center;
-} 
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #1a1a1a;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    color: white;
+}
+
+h1 {
+    background-color: #0c58ef;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+
+input[type="text"] {
+    padding: 10px;
+    border: none;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+    width: 200px;
+    font-size: 16px;
+}
+
+button#add-task-button {
+    padding: 10px;
+    background-color: #0066ff;
+    color: white;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+button#add-task-button:hover{
+    background-color: #0052cc;
+}
+
+ul {
+    padding: 0;
+    margin-top: 20px;
+}
+
+li {
+    list-style-type: none;
+    background: #3a3a3a;
+    border-radius: 8px;
+    padding: 12px 16px;
+    width: 280px;
+    margin: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+
+
+li.completed {
+    text-decoration: line-through;
+    opacity: 0.7;
+}
+
+li button {
+    background-color: #d32f2f;
+    border: none;
+    padding: 5px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+li button :hover {
+    background-color: #b71c1c;
+}
