--- a/Js_Projects/01_TODO-LocalStorage/styles.css
+++ b/Js_Projects/01_TODO-LocalStorage/styles.css
@@ -11,12 +11,28 @@ body {
     color: white;
 }
 
+.container {
+    background-color: #292828;    
+    padding: 30px 40px;             /* Spacious padding */
+    border-radius: 12px;            /* Rounded corners */
+    box-shadow: 0 8px 24px rgba(0,0,0,0.5); /* Soft shadow */
+    width: 310px;                   /* Fixed width */
+    display: flex;
+    flex-direction: column;
+    align-items: center;            /* Center content horizontally */
+}
+
 h1 {
-    background-color: #0c58ef;
+    /* background-color: #5206a8;
     padding: 10px 20px;
-    border-radius: 10px;
+    border-radius: 10px; */
     font-size: 35px;
     margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    /* align-items: center;  */
+    width: 280px;
+    align-content: center;
 }
 
 input[type="text"] {
@@ -30,7 +46,7 @@ input[type="text"] {
 
 button#add-task-button {
     padding: 10px;
-    background-color: #0066ff;
+    background-color: #5206a8;
     color: white;
     border: none;
     border-radius: 0 5px 5px 0;
@@ -40,7 +56,7 @@ button#add-task-button {
 }
 
 button#add-task-button:hover{
-    background-color: #0052cc;
+    background-color: #43047e;
 }
 
 ul {
