js projects done

--- a/Js_Projects/05_Quiz/styles.css
+++ b/Js_Projects/05_Quiz/styles.css
@@ -13,7 +13,9 @@ body{
     align-items: center;
     height: 100vh;
 }
-
+p {
+    margin-bottom: 10px;
+}
 .container {
     width: 400px;
     padding: 20px;
